--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,18 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Term-HiliteDiff
-version:      0.01
-version_from: lib/Term/HiliteDiff.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                Term-HiliteDiff
+version:             0.02
+abstract:            ~
+license:             ~
+generated_by:        ExtUtils::MakeMaker version 6.31
+distribution_type:   module
+requires:     
     Algorithm::Diff:               0
     Exporter:                      0
     strict:                        0
     Test:                          0
     vars:                          0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
+    version: 1.2
+author:
+    - Joshua ben Jore <twists@gmail.com>
