Import of JJORE/Term-HiliteDiff-0.03 from CPAN.
gitpan-cpan-distribution: Term-HiliteDiff
gitpan-cpan-version:      0.03
gitpan-cpan-path:         JJORE/Term-HiliteDiff-0.03.tar.gz
gitpan-cpan-author:       JJORE
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,7 +1,7 @@
 --- #YAML:1.0
 name:                Term-HiliteDiff
-version:             0.02
-abstract:            ~
+version:             0.03
+abstract:            Highlights differences in text with ANSI escape codes
 license:             ~
 generated_by:        ExtUtils::MakeMaker version 6.31
 distribution_type:   module
