--- a/META.yml
+++ b/META.yml
@@ -1,28 +1,21 @@
---- #YAML:1.0
-name:               Term-HiliteDiff
-version:            0.09
-abstract:           Highlights differences in text with ANSI escape codes
+---
+abstract: 'Highlights differences in text with ANSI escape codes'
 author:
-    - Josh ben Jore <jjore@cpan.org>
-license:            perl
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Josh Jore <jjore@cpan.org>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Exporter:    0
-    perl:        5.005
-    strict:      0
-    Test::More:  0
-    vars:        0
-resources:
-    repository:  http://github.com/jbenjore/Term-HiliteDiff
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.55_02
+  IPC::Run: 0
+  Test::More: 0
+configure_requires:
+  ExtUtils::MakeMaker: 6.31
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 4.200000, CPAN::Meta::Converter version 2.102400'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Term-HiliteDiff
+requires:
+  Exporter: 0
+  constant: 0
+  vars: 0
+version: 0.10
